# onnx-playground-axum

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: main.rs  yolov8m.rs
templates/: base.jinja
templates/pages/: yolo.jinja
